Fix alignment for small screen

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -806,9 +806,9 @@ Features-stack
 .schedule
 ========================================================================== */
 .schedule {
-  .events{
-    padding-left: 100px;
-  }
+ // .events{
+ //   padding-left: 100px;
+ // }
 
 
   .time {
